# OnyxKraken-Public

./: LICENSE  Makefile  QUICKSTART.md  README.md  config.py  core_entry.py  log.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  safety.json  server.py
agent/: action_dispatch.py  actions.py  chat_wait.py  context_router.py  conversation.py  error_recovery.py  model_router.py  observation.py  orchestrator.py  planner.py  task_runner.py  utils.py
core/: __init__.py  audit_log.py  autonomy.py  chain_workflow.py  command_router.py  council.py  discord_bot.py  discord_notify.py  event_bus.py  events.py  face_packs.py  gumroad.py  input_sanitizer.py  knowledge.py  license.py  mind.py  personality.py  personality_manager.py  platform.py  prediction_engine.py  pricing.py  screen_recorder.py  script_guard.py  security.py  self_improvement.py  service_launcher.py  service_registry.py  system_health.py  taint_tracker.py  telemetry.py  toolsmith.py  trust_ledger.py  updates.py  url_guard.py  utils.py  voice.py  web_scraper.py
eval/: __init__.py  benchmark.py  flywheel_experiment.py  metrics.py  tasks.json  verifiers.py
face/: __init__.py  app.py  app_catalog.py  backend.py  body_window.py  companion_mode.py  connections.py  extensions.py  extensions_controller.py  face_gui.py  face_spec.json  node_canvas.py  onboarding.py  pygame_viewport.py  render_backend.py  rigged_body_window.py  settings.py  workflow_builder.py  workflow_hud.py
memory/: __init__.py  base_store.py  conversation_db.py  embeddings.py  store.py  unified.py
nexus/: __init__.py  chunker.py  config.py  embeddings.py  engine.py  graph.py  ingest.py  models.py  prompts.py  synthesis.py  watcher.py
onyx-web/: NewDragon_ske.json  NewDragon_tex.json  README.md  index.html  main.js  package-lock.json  package.json
routes/: __init__.py  _state.py  agent.py  analytics.py  blender.py  daemon.py  drive.py  ecosystem.py  face_customize.py  face_packs.py  knowledge.py  voice_mind.py
(+185 files in other folders)
