[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onyxkraken"
version = "0.1.0"
description = "Local autonomous desktop agent with animated face GUI"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.11"
dependencies = [
    # Core Tamagotchi — cross-platform, minimal footprint
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "ollama>=0.4.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# Desktop automation (Windows-only)
desktop = [
    "pywinauto>=0.6.8",
    "pyautogui>=0.9.54",
    "mss>=9.0.1",
    "scikit-image>=0.22.0",
    "pyperclip>=1.8.0",
]
server = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]
voice = [
    "sounddevice>=0.4.6",
    "pyttsx3>=2.90",
    "edge-tts>=6.1.0",
    "pygame-ce>=2.5.0",
]
discord = [
    "discord.py>=2.3.0",
    "python-dotenv>=1.0.0",
]
knowledge = [
    "networkx>=3.2",
    "beautifulsoup4>=4.12.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.11.0",
]
vision = [
    "opencv-python>=4.9.0",
]
audio = [
    "librosa>=0.10.0",
    "mutagen>=1.47.0",
]
social = [
    "praw>=7.7.0",
    "pynput>=1.7.6",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.4.0",
]
all = [
    "onyxkraken[desktop,server,voice,discord,knowledge,vision,audio,social,dev]",
]

[project.scripts]
onyxkraken = "main:main"

[tool.setuptools]
py-modules = ["main", "config", "log", "server"]

[tool.setuptools.packages.find]
include = ["addons*", "agent*", "apps*", "core*", "desktop*", "eval*", "face*", "memory*", "vision*"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
